# school-project-assignment-nerds

./: .gitattributes  .gitignore  .gitkeep  README.md  package-lock.json
Docs/: NERDS.docx  NERDS.pptx
Qt/: InstallationLog.txt  MaintenanceTool.ini  components.xml  network.xml
Qt/msvc2019_64/include/QtMultimedia/: qtmultimediaversion.h
Qt/msvc2019_64/include/QtMultimediaQuick/: qtmultimediaquickversion.h
Qt/msvc2019_64/include/QtMultimediaWidgets/: qtmultimediawidgetsversion.h
Qt/msvc2019_64/include/QtPositioning/: qtpositioningversion.h
Qt/msvc2019_64/include/QtPositioningQuick/: qtpositioningquickversion.h
Qt/msvc2019_64/include/QtQuick3DSpatialAudio/: qtquick3dspatialaudioversion.h
Qt/msvc2019_64/include/QtQuickTimeline/: qtquicktimelineversion.h
Qt/msvc2019_64/include/QtQuickTimelineBlendTrees/: qtquicktimelineblendtreesversion.h
Qt/msvc2019_64/include/QtSpatialAudio/: qtspatialaudioversion.h
Qt/msvc2019_64/include/QtVirtualKeyboard/: qtvirtualkeyboardversion.h
Qt/msvc2019_64/include/QtVirtualKeyboardSettings/: qtvirtualkeyboardsettingsversion.h
Qt/msvc2019_64/include/QtWebChannel/: qtwebchannelversion.h
Qt/msvc2019_64/include/QtWebChannelQuick/: qtwebchannelquickversion.h
Qt/msvc2019_64/include/QtWebEngineCore/: qtwebenginecoreversion.h
Qt/msvc2019_64/include/QtWebEngineQuick/: QQuickWebEngineViewAccessible  qtwebenginequickversion.h
Qt/msvc2019_64/include/QtWebEngineWidgets/: QWebEngineViewAccessible  qtwebenginewidgetsversion.h
Qt/msvc2019_64/include/QtWebSockets/: qtwebsocketsversion.h
Qt/msvc2019_64/include/QtWebView/: qtwebviewversion.h
Qt/msvc2019_64/include/QtWebViewQuick/: qtwebviewquickversion.h
Qt/msvc2019_64/lib/: Qt6Multimedia.prl  Qt6MultimediaQuick.prl  Qt6MultimediaQuickd.prl  Qt6MultimediaWidgets.prl  Qt6MultimediaWidgetsd.prl  Qt6Multimediad.prl  Qt6Positioning.prl  Qt6PositioningQuick.prl  Qt6PositioningQuickd.prl  Qt6Positioningd.prl  Qt6Quick3DSpatialAudio.prl  Qt6Quick3DSpatialAudiod.prl  Qt6QuickTimeline.prl  Qt6QuickTimelineBlendTrees.prl  Qt6QuickTimelineBlendTreesd.prl  Qt6QuickTimelined.prl  Qt6SpatialAudio.prl  Qt6SpatialAudiod.prl  Qt6VirtualKeyboard.prl  Qt6VirtualKeyboardSettings.prl  Qt6VirtualKeyboardSettingsd.prl  Qt6VirtualKeyboardd.prl  Qt6WebChannel.prl  Qt6WebChannelQuick.prl  Qt6WebChannelQuickd.prl  Qt6WebChanneld.prl  Qt6WebEngineCore.prl  Qt6WebEngineCored.prl  Qt6WebEngineQuick.prl  Qt6WebEngineQuickDelegatesQml.prl  Qt6WebEngineQuickDelegatesQmld.prl  Qt6WebEngineQuickd.prl  Qt6WebEngineWidgets.prl  Qt6WebEngineWidgetsd.prl  Qt6WebSockets.prl  Qt6WebSocketsd.prl  Qt6WebView.prl  Qt6WebViewQuick.prl  Qt6WebViewQuickd.prl  Qt6WebViewd.prl
Qt/msvc2019_64/lib/cmake/Qt6BundledOpenwnn/: Qt6BundledOpenwnnDependencies.cmake
Qt/msvc2019_64/lib/cmake/Qt6BundledPinyin/: Qt6BundledPinyinDependencies.cmake
Qt/msvc2019_64/lib/cmake/Qt6BundledResonanceAudio/: Qt6BundledResonanceAudioConfig.cmake  Qt6BundledResonanceAudioTargets.cmake
Qt/msvc2019_64/lib/cmake/Qt6BundledTcime/: Qt6BundledTcimeDependencies.cmake
Qt/msvc2019_64/lib/cmake/Qt6Bundled_Clip2Tri/: Qt6Bundled_Clip2TriDependencies.cmake
Qt/msvc2019_64/lib/cmake/Qt6Gui/: Qt6QICNSPluginConfig.cmake  (+11 more)
Qt/msvc2019_64/metatypes/: qt6quicktimelineblendtrees_metatypes.json  qt6virtualkeyboardsettings_metatypes.json
Qt/msvc2019_64/mkspecs/modules/: qt_lib_multimedia.pri  qt_lib_multimedia_private.pri  qt_lib_multimediaquick_private.pri  qt_lib_multimediawidgets.pri  qt_lib_multimediawidgets_private.pri  qt_lib_positioning.pri  qt_lib_positioning_private.pri  qt_lib_positioningquick.pri  qt_lib_positioningquick_private.pri  qt_lib_quick3dspatialaudio_private.pri  qt_lib_quicktimeline.pri  qt_lib_quicktimeline_private.pri  qt_lib_quicktimelineblendtrees.pri  qt_lib_quicktimelineblendtrees_private.pri  qt_lib_spatialaudio.pri  qt_lib_spatialaudio_private.pri  qt_lib_virtualkeyboard.pri  qt_lib_virtualkeyboard_private.pri  qt_lib_virtualkeyboardsettings.pri  qt_lib_virtualkeyboardsettings_private.pri  qt_lib_webchannel.pri  qt_lib_webchannel_private.pri  qt_lib_webchannelquick.pri  qt_lib_webchannelquick_private.pri  qt_lib_webenginecore.pri  qt_lib_webenginecore_private.pri  qt_lib_webenginequick.pri  qt_lib_webenginequick_private.pri  qt_lib_webenginequickdelegatesqml.pri  qt_lib_webenginequickdelegatesqml_private.pri  qt_lib_webenginewidgets.pri  qt_lib_webenginewidgets_private.pri  qt_lib_websockets.pri  qt_lib_websockets_private.pri  qt_lib_webview.pri  qt_lib_webview_private.pri  qt_lib_webviewquick.pri  qt_lib_webviewquick_private.pri
Qt/msvc2019_64/modules/: Multimedia.json  MultimediaQuickPrivate.json  MultimediaWidgets.json  Positioning.json  PositioningQuick.json  Quick3DSpatialAudioPrivate.json  QuickTimeline.json  QuickTimelineBlendTrees.json  SpatialAudio.json  VirtualKeyboard.json  VirtualKeyboardSettings.json  WebChannel.json  WebChannelQuick.json  WebEngineCore.json  WebEngineQuick.json  WebEngineQuickDelegatesQml.json  WebEngineWidgets.json  WebSockets.json  WebView.json  WebViewQuick.json
ai/: getsolution.js
app/: CMakeLists.txt  Nerds_.sln  Nerds_.vcxproj  Nerds_.vcxproj.filters  app.cpp  images.qrc  main_.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  math.txt
(+146 files in other folders)
